<resources>
    <string name="app_name">Aviasales</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="main_page_name">Поиск дешевых авиабилетов</string>
    <string name="where_example">Куда - Турция</string>
    <string name="from_example">Откуда - Москва</string>
    <string name="main_musicaly_fly_over">Музыкально отлететь</string>
    <string name="hard_directions">Сложный маршрут</string>
    <string name="go_everywhere">Куда угодно</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="weekends">Выходные</string>
    <string name="popular_route">Популярное направление</string>
    <string name="sochi">Сочи</string>
    <string name="istambul">Стамбул</string>
    <string name="phuket">Пхукет</string>
    <string name="back">обратно</string>
    <string name="date">22 ноя, сб</string>
    <string name="person_and_type">1, эконом</string>
    <string name="filters">фильтры</string>
    <string name="direct_departure">Прямые рельсы</string>
    <string name="show_all_tickets">Посмотреть все билеты</string>
    <string name="show_all">Показать все</string>
    <string name="minsk">Минск</string>
    <string name="filter">Фильтр</string>
    <string name="diagram">График цен</string>
    <string name="aviatickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="less_long">Короче</string>
    <string name="subscribes">Подписки</string>
    <string name="profile">Профиль</string>
    <string name="preference_file_key">KEY_FROM</string>
    <string name="amount">от %1$s ₽</string>
    <string name="ru_alphabet">абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ\n</string>
    <string name="ru_alphabet_without_new_line">абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ</string>
    <string name="from_to">%1$s - %2$s</string>
    <string name="passenger">, 1 пассажир</string>
    <string name="route_tickets_screen">%1$s-%2$s</string>
    <string name="without_transfer">"Без пересадок"</string>
    <string name="with_transfer">ч в пути</string>
</resources>