<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_aviatickets"
        android:icon="@drawable/aviatickets"
        android:title="@string/aviatickets"/>

    <item
        android:id="@+id/navigation_search_main"
        android:icon="@drawable/hotel"
        android:title="@string/hotels" />

    <item
        android:id="@+id/navigation_search_filter"
        android:icon="@drawable/location"
        android:title="@string/less_long" />

    <item
        android:id="@+id/navigation_subscribes"
        android:icon="@drawable/bell"
        android:title="@string/subscribes" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/person"
        android:title="@string/profile" />

</menu>